sm8150: audio: Install our own a2dp_audio_policy_configuration.xml
* Meizu envenomed the code _(:зゝ∠)_

Change-Id: I2f026c362462c5cd46406680358882f9c86536bd

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -2,3 +2,4 @@ import /init.target.rc
 
 on init
     mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio/audio_policy_configuration.xml bind
+    mount none /system/etc/a2dp_audio_policy_configuration.xml /vendor/etc/a2dp_audio_policy_configuration.xml bind
