sm8150: livedisplay: Implement lut sysfs based IDisplayModes
Change-Id: Ib0133c70c7d380a0bf5d227a3a45377dbcd7708f

--- a/livedisplay/mokee.livedisplay@2.0-service-meizu_sm8150.rc
+++ b/livedisplay/mokee.livedisplay@2.0-service-meizu_sm8150.rc
@@ -2,3 +2,10 @@ service livedisplay-hal-2-0-meizu_sm8150 /system/bin/hw/mokee.livedisplay@2.0-se
     class late_start
     user system
     group system
+
+on post-fs-data
+    mkdir /data/vendor/display
+    chown system system /data/vendor/display
+
+on property:sys.boot_completed=1
+    exec - system system -- /system/bin/mokee.livedisplay@2.0-init.sh
