--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -3,3 +3,8 @@ import /init.target.rc
 on init
     mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio/audio_policy_configuration.xml bind
     mount none /system/etc/a2dp_audio_policy_configuration.xml /vendor/etc/a2dp_audio_policy_configuration.xml bind
+
+service charger.meizu /system/bin/charger
+    class charger
+    group system graphics
+    seclabel u:r:charger:s0
